# backtrader-bots

./: .coverage  .env.example  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
.windsurf/rules/: python-rules.md
docs/: architecture.md  brief.md
docs/prd/: epic-1-foundation-alpaca.md  epic-2-options-data.md  epic-3-strategy-execution.md  overview.md
scripts/: run_backtest.py
src/backtrader_alpaca/: __init__.py
src/backtrader_alpaca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backtrader_alpaca/clients/: __init__.py  alpaca_client.py  options_client.py  test_alpaca_client_more.py  test_clients.py
src/backtrader_alpaca/config/: __init__.py  settings.py  test_settings.py
src/backtrader_alpaca/execution/: __init__.py  alpaca_broker.py  backtest_runner.py  live_runner.py  test_alpaca_broker_more.py  test_backtest_runner_more.py  test_execution.py  test_live_runner_more.py
src/backtrader_alpaca/indicators/: __init__.py  swing_points.py
src/backtrader_alpaca/models/: __init__.py  account.py  market_data.py  options.py  test_models.py
src/backtrader_alpaca/monitoring/: __init__.py  performance_monitor.py
src/backtrader_alpaca/risk/: __init__.py  risk_manager.py
src/backtrader_alpaca/strategies/: __init__.py  base_strategy.py  divergence_strategy.py  example_strategy.py  test_example_strategy_more.py  test_strategies.py  unified_example_strategy.py
src/backtrader_alpaca/utils/: __init__.py  logger.py  test_logger.py
